// This file listes the protobuffer messages used in the example to make a simple uart communcation protocol. 
// Commands are send from the desktop to the microctontroller which in turn sends a reply. 

syntax = "proto3";

import "lora_device_messages.proto";
import "shared/lora_phy.proto";

option csharp_namespace = "LoRa";

message ClearMeasurementsCommand {
    // No content to report
    bool SendBootAfter = 1;
}

message UartCommand { 
    oneof Body { 
        // Configure the gateway device over UART
        RadioRxConfig rxConfig = 1; 
        RadioTxConfig txConfig = 2; 
        DeviceConfiguration deviceConfiguration = 3;
        // Request the info presented at boot
        RequestBootInfo requestBootInfo = 4; 
        ClearMeasurementsCommand clearMeasurementsCommand = 5;
        
        // Request a LoRa transmission - wraps similar commands as above
        LoRaMessage transmitCommand = 6;
    } 

    // Do not proxy the LoRa command - for debugging purposes
    bool doNotProxyCommand = 8;
    uint32 crc8 = 9;
} 
